# hw15_go_sql/internal/handler/handler.go
@@ -94,6 +94,6 @@ func New() *Handler {
 
 func InitHandler(api *gin.Engine, h *Handler) {
 	api.GET("/users", h.GetUsers())
-	api.GET("/user", h.GetUserByID())
+	api.GET("/user", h.GetUserByParameter())
 	api.POST("/add_user", h.AddUser())
 }
